<resources>
    <string name="app_name">Driving Tips</string>
    <string name="adj1">Adjective #1</string>
    <string name="adj2">Adjective #2</string>
    <string name="adj3">Adjective #3</string>
    <string name="adv">Adverb</string>
    <string name="noun1">Noun #1</string>
    <string name="noun2">Noun #2</string>
    <string name="noun3">Noun #3</string>
    <string name="noun4">Noun #4</string>
    <string name="noun5">Noun #5</string>
    <string name="noun6">Noun #6</string>
    <string name="plural_noun">Plural Noun</string>
    <string name="button_text">Generate My Story</string>
    <string name="title">Fill up the blanks for generate a story</string>
    <string name="txt1">Driving a car can be fun if you follow this</string>
    <string name="adj1F">ADJ 1</string>
    <string name="txt2">advice:</string>
    <string name="txt3">When approaching a</string>
    <string name="txt4">on the right,</string>
    <string name="adj2F">ADJ 2</string>
    <string name="txt5">always blow your</string>
    <string name="adj3F">ADJ 3</string>
    <string name="advF">ADV</string>
    <string name="noun1F">NOUN 1</string>
    <string name="noun2F">NOUN 2</string>
    <string name="noun3F">NOUN 3</string>
    <string name="noun4F">NOUN 4</string>
    <string name="noun5F">NOUN 5</string>
    <string name="noun6F">NOUN 6</string>
    <string name="plural_nounF">PLURAL NOUN</string>
    <string name="txt6">Before making a</string>
    <string name="txt7">turn,</string>
    <string name="txt8">always stick to your</string>
    <string name="txt9">way out of the window.</string>
    <string name="txt10">Every 2000 miles,</string>
    <string name="txt11">have your</string>
    <string name="txt12">inspected</string>
    <string name="txt13">"and your "</string>
    <string name="txt14">checked.</string>
    <string name="txt15">When approaching school,</string>
    <string name="txt16">watch out for</string>
    <string name="txt17">Above all, drive</string>
    <string name="txt18">The</string>
    <string name="txt19">you save may be your own!</string>
    <string name="page_title">Driving Tips!</string>
</resources>
