<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:layout_gravity="center"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <!--Put form controls here-->

        <TextView
            android:id="@+id/title_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="10.5pt"
            android:typeface="normal"
            android:verticalScrollbarPosition="defaultPosition"
            android:visibility="visible"></TextView>


        <EditText
            android:id="@+id/adj1"
            android:layout_height="wrap_content"
            android:hint="@string/adj1"
            android:inputType="textPersonName"
            android:layout_width="fill_parent"
            android:autofillHints="">
        </EditText>

        <EditText
            android:id="@+id/adj2"
            android:layout_height="wrap_content"
            android:hint="@string/adj2"
            android:inputType="textPersonName"
            android:layout_width="fill_parent"
            android:autofillHints="">
        </EditText>

        <EditText
            android:id="@+id/adj3"
            android:layout_height="wrap_content"
            android:hint="@string/adj3"
            android:inputType="textPersonName"
            android:layout_width="fill_parent"
            android:autofillHints="">
        </EditText>

        <EditText
            android:id="@+id/adverb"
            android:layout_height="wrap_content"
            android:hint="@string/adv"
            android:inputType="textPersonName"
            android:layout_width="fill_parent"
            android:autofillHints="">
        </EditText>

        <EditText
            android:id="@+id/noun1"
            android:layout_height="wrap_content"
            android:hint="@string/noun1"
            android:inputType="textPersonName"
            android:layout_width="fill_parent"
            android:autofillHints="">
        </EditText>

        <EditText
            android:id="@+id/noun2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/noun2"
            android:inputType="textPersonName"
            android:autofillHints=""></EditText>

        <EditText
            android:id="@+id/noun3"
            android:layout_height="wrap_content"
            android:hint="@string/noun3"
            android:inputType="textPersonName"
            android:layout_width="fill_parent"
            android:autofillHints="">
        </EditText>

        <EditText
            android:id="@+id/noun4"
            android:layout_height="wrap_content"
            android:hint="@string/noun4"
            android:inputType="textPersonName"
            android:layout_width="fill_parent"
            android:autofillHints="">
        </EditText>

        <EditText
            android:id="@+id/noun5"
            android:layout_height="wrap_content"
            android:hint="@string/noun5"
            android:inputType="textPersonName"
            android:layout_width="fill_parent"
            android:autofillHints="">
        </EditText>

        <EditText
            android:id="@+id/noun6"
            android:layout_height="wrap_content"
            android:hint="@string/noun6"
            android:inputType="textPersonName"
            android:layout_width="fill_parent"
            android:autofillHints="">
        </EditText>

        <EditText
            android:id="@+id/plural_noun"
            android:layout_height="wrap_content"
            android:hint="@string/plural_noun"
            android:inputType="textPersonName"
            android:layout_width="fill_parent"
            android:autofillHints="">
        </EditText>

        <Button
            android:id="@+id/generate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:onClick="sendMessage"
            android:text="@string/button_text"></Button>
    </LinearLayout>
</ScrollView>